--- a/scss/components/_mobile-nav-header.scss
+++ b/scss/components/_mobile-nav-header.scss
@@ -91,7 +91,7 @@ $animateSpeed: .2s;
   }
   .vertical li {
     &:not(.js-drilldown-back):not(.nested-close-button){
-      border-bottom: 1px solid color.scale($light-gray, $lightness: -9.8%); // darken($light-gray, 9.8%);
+      border-bottom: 1px solid color.adjust($light-gray, $lightness: -9.8%, $space: hsl); // darken($light-gray, 9.8%);
     }
     .header {
       background-color: $light-gray;
