--- a/scss/_settings_corp.scss
+++ b/scss/_settings_corp.scss
@@ -262,7 +262,7 @@ $accordion-background: $light-gray;
 $accordion-plusminus: false;
 $accordion-title-font-size: rem-calc(16);
 $accordion-item-color: $primary-color;
-$accordion-item-background-hover: scale-color($light-gray, $lightness: -5%);
+$accordion-item-background-hover: color.adjust($light-gray, $lightness: -5%, $space: hsl);
 $accordion-item-padding: 1rem 2.5rem 1rem 1rem;
 $accordion-content-background: $white;
 $accordion-content-border: $light-gray;
@@ -341,10 +341,10 @@ $button-palette: (
 $button-hover-palette: (
   primary: map-get($colors, green1),
   secondary: map-get($colors, blue4),
-  tertiary: color.scale(map-get($colors, navy1), $lightness: 4%),  //lighten(map-get($colors, navy1), 4%),
-  alert: color.scale($fm-red, $lightness: 12%), // lighten($fm-red, 12%),
+  tertiary: color.adjust(map-get($colors, navy1), $lightness: 4%, $space: hsl),  //lighten(map-get($colors, navy1), 4%),
+  alert: color.adjust($fm-red, $lightness: 12%, $space: hsl), // lighten($fm-red, 12%),
   default: rgba($dark-gray, 0.6),
-  // warning: color.scale($fm-yellow, $lightness: 12%), // lighten($fm-yellow, 12%),
+  // warning: color.adjust($fm-yellow, $lightness: 12%, $space: hsl), // lighten($fm-yellow, 12%),
 );
 $button-opacity-disabled: 0.35;
 //$button-background-hover-lightness: 20%;
@@ -366,7 +366,7 @@ $buttongroup-radius-on-each: false;
 
 $callout-background: none;
 $callout-background-fade: 0%;  // don't use
-$callout-border: 2px solid color.scale($light-gray, $lightness: -5%); // darken($light-gray, 5%);
+$callout-border: 2px solid color.adjust($light-gray, $lightness: -5%, $space: hsl); // darken($light-gray, 5%);
 $callout-margin: 0 0 1rem;
 $callout-padding: 1.25rem;
 $callout-font-color: currentColor;  // don't use
@@ -832,15 +832,15 @@ $table-color-scale: 4%;
 $table-border: 1px solid $white;  //stripes below thead, tfoot and tbody
 $table-padding: rem-calc(8 10 10);
 $table-hover-scale: 1%;
-$table-row-hover: color.scale($table-background, $lightness: -($table-hover-scale)); // darken($table-background, $table-hover-scale);
+$table-row-hover: color.adjust($table-background, $lightness: -($table-hover-scale), $space: hsl); // darken($table-background, $table-hover-scale);
 $table-striped-background: $white;
-$table-row-stripe-hover: color.scale($table-background, $lightness: $table-hover-scale); // lighten($table-background, $table-hover-scale);
+$table-row-stripe-hover: color.adjust($table-background, $lightness: $table-hover-scale, $space: hsl); // lighten($table-background, $table-hover-scale);
 $table-is-striped: true;
 $table-stripe: even;
 $table-head-background: map-get($colors, navy3); // MF color is different
-$table-head-row-hover: color.scale($table-background, $lightness: -($table-color-scale)); //darken($table-head-background, $table-color-scale);
+$table-head-row-hover: color.adjust($table-background, $lightness: -($table-color-scale), $space: hsl); //darken($table-head-background, $table-color-scale);
 $table-foot-background: $table-background;
-$table-foot-row-hover: color.scale($table-background, $lightness: -($table-hover-scale)); // darken($table-foot-background, $table-hover-scale);
+$table-foot-row-hover: color.adjust($table-background, $lightness: -($table-hover-scale), $space: hsl); // darken($table-foot-background, $table-hover-scale);
 $table-head-font-color: $white;
 $table-foot-font-color: $body-font-color;
 $show-header-for-stacked: false;
