--- a/scss/components/_nav-footer.scss
+++ b/scss/components/_nav-footer.scss
@@ -17,11 +17,11 @@
   @include breakpoint(large) {
     background: map-get($colors, navy5)
     repeating-linear-gradient(147deg,
-    color.scale(map-get($colors, navy5), $lightness:  8%) 0%,
-    color.scale(map-get($colors, navy5), $lightness:  8%) 21.5%,
-    color.scale(map-get($colors, navy5), $lightness:  5%) 21.5%,
-    color.scale(map-get($colors, navy5), $lightness:  5%) 39.25%,
-    color.scale(map-get($colors, navy5), $lightness:  2%) 39.25%,
+    color.adjust(map-get($colors, navy5), $lightness:  8%, $space: hsl) 0%,
+    color.adjust(map-get($colors, navy5), $lightness:  8%, $space: hsl) 21.5%,
+    color.adjust(map-get($colors, navy5), $lightness:  5%, $space: hsl) 21.5%,
+    color.adjust(map-get($colors, navy5), $lightness:  5%, $space: hsl) 39.25%,
+    color.adjust(map-get($colors, navy5), $lightness:  2%, $space: hsl) 39.25%,
     map-get($colors, navy5) 100%);
   }
   @include breakpoint(medium){
