Update to Fnd6.9.0 and add color compare function.

--- a/scss/_components.scss
+++ b/scss/_components.scss
@@ -1,4 +1,5 @@
 @import 'mixins';
+// @import 'components/testing';
 @import 'components/body';
 @import 'components/icons';
 @import 'components/code';
